cmake_minimum_required(VERSION 3.22)
project(CS_150)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CS_150 main.cpp)

#Homework 2
#[[
add_executable(UberCharge Module2/HW2/UberCharge/UberCharge.cpp)
add_executable(HolidayGifts Module2/HW2/HolidayGifts/HolidayGifts.cpp)
add_executable(Feet Module2/HW2/Feet/Feet.cpp)
add_executable(Haiku Module2/HW2/Haiku/Haiku.cpp
]]

add_executable(Lab2 Module2/Lab2/lab2.cpp)
#Homework 3
add_executable(FtoC Module3/HW3/FtoC/FtoC.cpp)
add_executable(VendingMachine Module3/HW3/VendingMachine/VendingMachine.cpp)
add_executable(CalorieCalculator Module3/HW3/CalorieCalculator/CalorieCalculator.cpp)
