cmake_minimum_required(VERSION 3.22)
project(CS_150)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CS_150 main.cpp)

#Homework 2
#[[
add_executable(UberCharge Module2/HW2/UberCharge/UberCharge.cpp)
add_executable(HolidayGifts Module2/HW2/HolidayGifts/HolidayGifts.cpp)
add_executable(Feet Module2/HW2/Feet/Feet.cpp)
add_executable(Haiku Module2/HW2/Haiku/Haiku.cpp

add_executable(Lab2 Module2/Lab2/lab2.cpp)

#Homework 3
add_executable(FtoC Module3/HW3/FtoC/FtoC.cpp)
add_executable(VendingMachine Module3/HW3/VendingMachine/VendingMachine.cpp)
add_executable(CalorieCalculator Module3/HW3/CalorieCalculator/CalorieCalculator.cpp)

#Module 4
add_executable(Sphere Module4/HW4/Sphere/Sphere.cpp)
add_executable(FloorToCeiling Module4/HW4/FloorToCeiling/FloorToCeiling.cpp)
add_executable(Trigonometry Module4/HW4/Trigonometry/Trigonometry.cpp)
add_executable(FloorToCeiling Module4/HW4/FloorToCeiling/FloorToCeiling.cpp)

#Module 5
add_executable(ArtSupplies Module5/HW5/ArtSupplies/ArtSupplies.cpp)
add_executable(Names Module5/HW5/Names/Names.cpp)
add_executable(Arithmetic Module5/HW5/ArithmeticProblem/ArithmeticProblem.cpp)

add_executable(FormatBudget Module5/Lab5/FormatBudget/FormatBudget.cpp)

#Module 6
add_executable(height Module6/HW6/Height/Height.cpp)
add_executable(calories Module6/HW6/CalorieCalculator2/CalorieCalculator2.cpp)

add_executable(train Module6/Lab6/trainTickets.cpp)

#Module 7
add_executable(CarRental Module7/Lab7/CarRental/CarRental.cpp)
add_executable(GeometricFigure Module7/HW7/GeometricFigure/GeometricFigure.cpp)
add_executable(TakeTheTrain Module7/HW7/TakeTheTrain/TakeTheTrain.cpp)
]]
#Module 8
add_executable(GradeCounter Module8/HW8/GradeCounter/GradeCounter.cpp)
add_executable(LoanPayoff Module8/HW8/LoanPayoff/LoanPayoff.cpp)
add_executable(SavingAccountBalance Module8/HW8/SavingAccountBalance/SavingAccountBalance.cpp)

add_executable(PrintTriangle Module8/Lab8/PrintTriangle/PrintTriangle.cpp)